Agrego bootstrap a pagina de eventos

--- a/pages/support.html
+++ b/pages/support.html
@@ -9,7 +9,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Ugly.Gallery Suport</title>
+        <title>Suport</title>
         <link rel="stylesheet" href="../styles/styles.css">
     </head>
     <body>
@@ -29,8 +29,16 @@
                 <h2>Suport Me</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus dolore, aliquam rerum architecto cum at et expedita, veritatis suscipit aut quo magni eum saepe facere? Sit illo nisi quidem culpa?</p>
                 <div class="image_me"></div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus dolore, aliquam rerum architecto cum at et expedita, veritatis suscipit aut quo magni eum saepe facere? Sit illo nisi quidem culpa? Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus dolore, aliquam rerum architecto cum at et expedita, veritatis suscipit aut quo magni eum saepe facere? Sit illo nisi quidem culpa? Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus dolore, aliquam rerum architecto cum at et expedita, veritatis suscipit aut quo magni eum saepe facere? Sit illo nisi quidem culpa?</p>
-                <button class="button">Pedir tu cafe a domicilio  🧋</button>
+                <div class="slice">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus dolore, aliquam rerum architecto cum at et expedita, veritatis suscipit aut quo magni eum saepe facere? Sit illo nisi quidem culpa? Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus dolore, aliquam rerum architecto cum at et expedita, veritatis suscipit aut quo magni eum saepe facere? Sit illo nisi quidem culpa? Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus dolore, aliquam rerum architecto cum at et expedita, veritatis suscipit aut quo magni eum saepe facere? Sit illo nisi quidem culpa?</p>
+
+
+                </div>
+                <button  class="button">Pedir tu cafe a domicilio ☕ </button>
+        <div class="cafe">
+            <img src="../img/cafecito.png" alt="" class="galeria__image">
+
+        </div>
             </section>
         </main>
 
