--- a/pages/products.html
+++ b/pages/products.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <header>
     <nav id="menu">
@@ -31,7 +31,7 @@
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. At, assumenda corporis. Beatae ullam maxime quidem quis repellat sequi voluptatum id dignissimos quia veritatis. Esse, cupiditate ullam obcaecati nobis cum asperiores?</p>
                     <p class="card-text"><small class="text-muted">Precio = 1US$</small></p>
-                    <button type="button" class="btn btn-primary btn-sm">Comprar!</button>
+                    <button type="button" class="btn btn-primary btn-sm">Agregar al pedido</button>
                   </div>
                 </div>
                 <div class="card">
@@ -40,7 +40,7 @@
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                     <p class="card-text"><small class="text-muted">Precio = 1US$</small></p>
-                    <button type="button" class="btn btn-primary btn-sm">Comprar!</button>
+                    <button type="button" class="btn btn-primary btn-sm">Agregar al pedido</button>
                   </div>
                 </div>
                 <div class="card">
@@ -49,7 +49,7 @@
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                     <p class="card-text"><small class="text-muted">Precio = 1US$</small></p>
-                    <button type="button" class="btn btn-primary btn-sm">Comprar!</button>
+                    <button type="button" class="btn btn-primary btn-sm">Agregar al pedido</button>
                   </div>
                 </div>
               </div>
@@ -63,7 +63,7 @@
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe ab natus necessitatibus quaerat quod dolorem possimus quibusdam illum error laudantium illo numquam consequatur qui autem porro, assumenda neque soluta velit?</p>
                     <p class="card-text"><small class="text-muted">Precio = 1US$</small></p>
-                    <button type="button" class="btn btn-primary btn-sm">Comprar!</button>
+                    <button type="button" class="btn btn-primary btn-sm">Agregar al pedido</button>
                   </div>
                 </div>
                 <div class="card">
@@ -72,7 +72,7 @@
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                     <p class="card-text"><small class="text-muted">Precio = 1US$</small></p>
-                    <button type="button" class="btn btn-primary btn-sm">Comprar!</button>
+                    <button type="button" class="btn btn-primary btn-sm">Agregar al pedido</button>
                   </div>
                 </div>
                 <div class="card">
@@ -81,7 +81,7 @@
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                     <p class="card-text"><small class="text-muted">Precio = 1US$</small></p>
-                    <button type="button" class="btn btn-primary btn-sm">Comprar!</button>
+                    <button type="button" class="btn btn-primary btn-sm">Agregar al pedido</button>
                   </div>
                 </div>
               </div>
@@ -95,7 +95,7 @@
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                     <p class="card-text"><small class="text-muted">Precio = 1US$</small></p>
-                    <button type="button" class="btn btn-primary btn-sm">Comprar!</button>
+                    <button type="button" class="btn btn-primary btn-sm">Agregar al pedido</button>
                   </div>
                 </div>
                 <div class="card">
@@ -104,7 +104,7 @@
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                     <p class="card-text"><small class="text-muted">Precio = 1US$</small></p>
-                    <button type="button" class="btn btn-primary btn-sm">Comprar!</button>
+                    <button type="button" class="btn btn-primary btn-sm">Agregar al pedido</button>
                   </div>
                 </div>
                 <div class="card">
@@ -113,7 +113,7 @@
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                     <p class="card-text"><small class="text-muted">Precio = 1US$</small></p>
-                    <button type="button" class="btn btn-primary btn-sm">Comprar!</button>
+                    <button type="button" class="btn btn-primary btn-sm">Agregar al pedido</button>
                   </div>
                 </div>
               </div>
