segunda correccion de formulario tamaños

--- a/pages/support.html
+++ b/pages/support.html
@@ -39,11 +39,11 @@
             <img src="../img/cafecito.png" alt="" class="galeria__image">
 
         </div>
-            </section>
+            </section> 
         </main>
 
-        <section class="formulario">
-                <div>
+            <section>
+                <div class="formulario">
                     <form action="">
                         <fieldset>
                             <legend>Contactanos:</legend>
@@ -54,22 +54,22 @@
                             <label for="Edad">Edad: </label>
                             <input type="number" name="Edad">
 
-                    <p>Hombre</p>
-                    <input type="radio" name="sexo" value="Masculino">
+                        <p>Hombre</p>
+                        <input type="radio" name="sexo" value="Masculino">
 
-                    <div>Mujer</div>
-                    <input type="radio" name="sexo" value="Femenino">
+                        <div>Mujer</div>
+                        <input type="radio" name="sexo" value="Femenino">
 
-                    <div>Otro</div>
-                    <input type="radio" name="sexo" value="Otro">
+                        <div>Otro</div>
+                        <input type="radio" name="sexo" value="Otro">
 
-                    <p>Preferencia</p>
-                    <select name="Preferencia" id="">
-                        <option value="Capuccino">Capuccino</option>
-                        <option value="Te">Te</option>
-                        <option value="Batidos">Batidos</option>
-                        <option value="Tragos">Tragos</option>
-                    </select>
+                        <p>Preferencia</p>
+                        <select name="Preferencia" id="">
+                            <option value="Capuccino">Capuccino</option>
+                            <option value="Te">Te</option>
+                            <option value="Batidos">Batidos</option>
+                            <option value="Tragos">Tragos</option>
+                        </select>
                         
                         <p>Acepto terminos y condiciones</p>
                         <input type="checkbox" name="Acepto" value="verdadero">
