edicion de estilos scss y correcion de pagina

--- a/pages/about.html
+++ b/pages/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../scss/style.css">
 </head>
 
 <body>
@@ -29,6 +29,7 @@
 
         </section>
 
+
         <section class="about">
                     <div class="fondo">
                     <h2>Nuestro Café </h2>
@@ -42,6 +43,7 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d819.8050255691124!2d-55.960199770771524!3d-34.724845998776765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a0277f65ba3177%3A0xd6bd5e67939ab43c!2zU8OhbmRhbG8gY2Fmw6k!5e0!3m2!1ses-419!2suy!4v1664579667023!5m2!1ses-419!2suy" width="300" height="225" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
     </main>
+
     <footer> Sandalo cafe © 2022  All rights reserved.
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
             <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
