edicion de estilos scss y correcion de pagina

--- a/pages/support.html
+++ b/pages/support.html
@@ -25,7 +25,7 @@
             </nav>
         </header>
         <main>
-            <section style="display: grid; justify-content: center; justify-items: center;">
+            <section class="contacto">
                 <h2>Suport Me</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus dolore, aliquam rerum architecto cum at et expedita, veritatis suscipit aut quo magni eum saepe facere? Sit illo nisi quidem culpa?</p>
                 <div class="image_me"></div>
@@ -35,10 +35,10 @@
 
                 </div>
                 <button  class="button">Pedir tu cafe a domicilio ☕ </button>
-        <div class="cafe">
+             <div class="cafe">
             <img src="../img/cafecito.png" alt="" class="galeria__image">
 
-        </div>
+                </div>
             </section> 
         </main>
 
