cambios multiples logos mmas estilos y scss

--- a/pages/products.html
+++ b/pages/products.html
@@ -24,6 +24,9 @@
 <body>
     <main>
         <nav>
+          <div class="shake">
+            <h1>NUESTROS PRODUCTOS</h1>
+          </div>
             <div class="card-group">
                 <div class="card">
                   <img src="../img/13.jpg" class="card-img-top" alt="...">
