--- a/pages/support.html
+++ b/pages/support.html
@@ -25,6 +25,17 @@
             </nav>
         </header>
         <main>
+            <main>
+                <section class="logocontenedor">
+                    <div>
+                        <img src="../img/logo.jpg" alt="" id="logo">
+                    </div>
+                    
+                </section>
+
+            <section>
+                <h1>Gracias por visitarnos, te esperamos pronto!</h1>
+            </section>
             <section class="contacto">
                 <h2>Suport Me</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus dolore, aliquam rerum architecto cum at et expedita, veritatis suscipit aut quo magni eum saepe facere? Sit illo nisi quidem culpa?</p>
@@ -43,6 +54,9 @@
         </main>
 
             <section>
+                <div>
+                    <h3>Dejanos tus datos para mas ofertas y promociones imperdibles y contanos cuál es tu menu preferido</h3>
+                </div>
                 <div class="formulario">
                     <form action="">
                         <fieldset>
